[gd_scene load_steps=48 format=3 uid="uid://bxby1dcpjypq1"]

[ext_resource type="Script" path="res://scripts/maingame.gd" id="1_wnv5v"]
[ext_resource type="PackedScene" uid="uid://d2q8y0rtu2njt" path="res://modules/module3.tscn" id="4_gsb83"]
[ext_resource type="Script" path="res://scripts/player.gd" id="4_jqq52"]
[ext_resource type="PackedScene" uid="uid://qcmysdc04y1g" path="res://Collision models/ship_player.tscn" id="4_uw0nc"]
[ext_resource type="FontFile" uid="uid://dsi7o2aoknly3" path="res://fonts/pixelfy/Pixelfy.ttf" id="8_i8see"]
[ext_resource type="PackedScene" uid="uid://p71xwawyruxj" path="res://modules/module1.tscn" id="10_lvdis"]
[ext_resource type="PackedScene" uid="uid://3sve2nrss2io" path="res://modules/module2.tscn" id="11_5k1nh"]
[ext_resource type="Script" path="res://scripts/level.gd" id="11_m4f8i"]
[ext_resource type="PackedScene" uid="uid://c78ayj4g08730" path="res://modules/module4.tscn" id="13_oxc55"]
[ext_resource type="Texture2D" uid="uid://cp2rb13t1lvpo" path="res://assets/kenney_pixel-ui-pack/9-Slice/Ancient/brown.png" id="14_dl5ge"]
[ext_resource type="PackedScene" uid="uid://c00c43s6bd7vd" path="res://modules/module5.tscn" id="14_frpyu"]
[ext_resource type="PackedScene" uid="uid://bwcd0ddn06jlj" path="res://modules/module6.tscn" id="15_570dw"]
[ext_resource type="PackedScene" uid="uid://d2tj7rgnpyjob" path="res://modules/module7.tscn" id="16_1xdyq"]
[ext_resource type="FontFile" uid="uid://ccvk0qw2cv67s" path="res://fonts/Volt5x5.ttf" id="16_adygd"]
[ext_resource type="Texture2D" uid="uid://c4bpfh6vdxc2j" path="res://assets/kenney_pixel-ui-pack/9-Slice/Ancient/tan_pressed.png" id="17_0eti2"]
[ext_resource type="Texture2D" uid="uid://bdw4kqayn1xa6" path="res://assets/kenney_pixel-ui-pack/9-Slice/space.png" id="17_c41jn"]
[ext_resource type="PackedScene" uid="uid://ca4j2j3gk4wlj" path="res://modules/module8.tscn" id="17_ufinj"]
[ext_resource type="Texture2D" uid="uid://cdnd5nd6wgibp" path="res://assets/kenney_pixel-ui-pack/9-Slice/Colored/blue_pressed.png" id="18_dbp7u"]
[ext_resource type="PackedScene" uid="uid://bn7jf803mnduo" path="res://modules/module9.tscn" id="18_vqm4g"]
[ext_resource type="PackedScene" uid="uid://bj3djjm7st51" path="res://modules/module10.tscn" id="19_as1pv"]
[ext_resource type="AudioStream" uid="uid://6twnurdx5a2u" path="res://sounds/flap.mp3" id="20_w02wt"]
[ext_resource type="PackedScene" uid="uid://6w2ycyuml6tj" path="res://scenes/pause_unpause.tscn" id="23_c52bb"]
[ext_resource type="Texture2D" uid="uid://gno3ogeel56t" path="res://assets/hud_coin.png" id="24_8hx65"]
[ext_resource type="AudioStream" uid="uid://ceh35h1cwriwb" path="res://sounds/damaged sound.mp3" id="24_yu2sg"]
[ext_resource type="Script" path="res://scripts/CollectedCoins.gd" id="25_o24yq"]
[ext_resource type="Script" path="res://scripts/score.gd" id="26_2lu3s"]
[ext_resource type="AudioStream" uid="uid://denfwm7kr0aos" path="res://sounds/button press.mp3" id="26_tjj7e"]
[ext_resource type="AudioStream" uid="uid://cg7vx7duj02se" path="res://sounds/huh sound.mp3" id="28_hux4u"]
[ext_resource type="AudioStream" uid="uid://jkjysf1fmpii" path="res://sounds/river sound.mp3" id="29_ioy0k"]
[ext_resource type="AudioStream" uid="uid://83qkndexs5ys" path="res://sounds/sound splash soumd.mp3" id="30_ytmqr"]
[ext_resource type="AudioStream" uid="uid://dl20i40fpokts" path="res://sounds/game_lobby_music.mp3" id="31_61x10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3sahg"]
size = Vector2(49, 49)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rn0po"]

[sub_resource type="Sky" id="Sky_vftai"]
sky_material = SubResource("ProceduralSkyMaterial_rn0po")

[sub_resource type="Environment" id="Environment_0n70x"]
background_mode = 2
sky = SubResource("Sky_vftai")
ambient_light_source = 3
fog_enabled = true
fog_light_color = Color(0.54902, 0.792157, 1, 1)
fog_light_energy = 0.82
fog_density = 0.1076
fog_aerial_perspective = 0.7
fog_sky_affect = 0.759
volumetric_fog_enabled = true

[sub_resource type="Animation" id="Animation_lacdm"]
resource_name = "up_down"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-15.137, 2, 0.001), Vector3(-15.137, 2.1, 0.001), Vector3(-15.137, 2, 0.001), Vector3(-15.137, 2.1, 0.001), Vector3(-15.137, 2, 0.001)]
}

[sub_resource type="Animation" id="Animation_d8jwm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-15.137, 2, 0.001)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u0nxb"]
_data = {
"RESET": SubResource("Animation_d8jwm"),
"up_down": SubResource("Animation_lacdm")
}

[sub_resource type="Animation" id="Animation_j27w8"]
length = 0.001

[sub_resource type="Animation" id="Animation_q4h6g"]
resource_name = "weakShake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.0003, 0.0004, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(5.65685, 1, 1, 1, 1, 1.41421, 1.46409, 1, 1.46409, 1),
"update": 0,
"values": [Vector3(0.213, 4.632, -7.493), Vector3(0.21274, 4.63173, -7.7931), Vector3(0.21274, 4.63173, -7.7931), Vector3(0.21274, 4.63173, -7.7931), Vector3(0.113, 4.932, -5.793), Vector3(0.213, 4.932, -7.493), Vector3(0.113, 4.932, -5.793), Vector3(-0.113, 5.732, -6.793), Vector3(0.213, 4.632, -7.493), Vector3(0.113, 4.932, -5.793)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tsquk"]
_data = {
"RESET": SubResource("Animation_j27w8"),
"weakShake": SubResource("Animation_q4h6g")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_3tsol"]
size = Vector3(0.620956, 0.249291, 0.585958)

[sub_resource type="BoxShape3D" id="BoxShape3D_2pnkp"]
size = Vector3(0.279869, 0.323652, 0.802732)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ticod"]
size = Vector2(49, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eelpb"]
size = Vector2(49, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uivif"]
size = Vector2(49, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfl7j"]
size = Vector2(50, 50)

[node name="MainGame" type="Node3D"]
script = ExtResource("1_wnv5v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseUnpause" parent="CanvasLayer" instance=ExtResource("23_c52bb")]
visible = false

[node name="continue" type="TouchScreenButton" parent="CanvasLayer/PauseUnpause"]
position = Vector2(248, 720)
scale = Vector2(8.16667, 3.33333)
texture_normal = ExtResource("17_c41jn")
texture_pressed = ExtResource("18_dbp7u")
shape = SubResource("RectangleShape2D_3sahg")

[node name="Continue2" type="Label" parent="CanvasLayer/PauseUnpause"]
layout_mode = 0
offset_left = 352.0
offset_top = 752.0
offset_right = 528.0
offset_bottom = 928.0
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_adygd")
theme_override_font_sizes/font_size = 90
text = "continue"

[node name="menu" type="TouchScreenButton" parent="CanvasLayer/PauseUnpause"]
position = Vector2(248, 928)
scale = Vector2(8.16667, 3.33333)
texture_normal = ExtResource("17_c41jn")

[node name="menu2" type="Label" parent="CanvasLayer/PauseUnpause"]
layout_mode = 0
offset_left = 392.0
offset_top = 960.0
offset_right = 568.0
offset_bottom = 1136.0
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_adygd")
theme_override_font_sizes/font_size = 90
text = "menu"

[node name="menuAudio" type="AudioStreamPlayer" parent="CanvasLayer/PauseUnpause"]
stream = ExtResource("26_tjj7e")

[node name="PauseTimer" type="Timer" parent="CanvasLayer/PauseUnpause"]

[node name="Countdown" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="3" type="Label" parent="CanvasLayer/Countdown"]
visible = false
modulate = Color(0.882353, 0.894118, 0.329412, 1)
layout_mode = 0
offset_left = 392.0
offset_top = 416.0
offset_right = 492.0
offset_bottom = 609.0
theme_override_fonts/font = ExtResource("8_i8see")
theme_override_font_sizes/font_size = 190
text = "3"

[node name="2" type="Label" parent="CanvasLayer/Countdown"]
visible = false
modulate = Color(0.882353, 0.894118, 0.329412, 1)
layout_mode = 0
offset_left = 392.0
offset_top = 416.0
offset_right = 492.0
offset_bottom = 609.0
theme_override_fonts/font = ExtResource("8_i8see")
theme_override_font_sizes/font_size = 190
text = "2"

[node name="1" type="Label" parent="CanvasLayer/Countdown"]
visible = false
modulate = Color(0.882353, 0.894118, 0.329412, 1)
layout_mode = 0
offset_left = 392.0
offset_top = 416.0
offset_right = 492.0
offset_bottom = 609.0
theme_override_fonts/font = ExtResource("8_i8see")
theme_override_font_sizes/font_size = 190
text = "1"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.706142, -0.681129, 0.193461, -0.0349229, 0.239388, 0.970296, -0.707209, -0.691922, 0.145255, 0, 18.3897, 0)
light_energy = 3.0
shadow_enabled = true
shadow_blur = 1.617

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0n70x")

[node name="level" type="Node3D" parent="."]
script = ExtResource("11_m4f8i")
modules = Array[PackedScene]([ExtResource("10_lvdis"), ExtResource("11_5k1nh"), ExtResource("4_gsb83"), ExtResource("13_oxc55"), ExtResource("14_frpyu"), ExtResource("15_570dw"), ExtResource("16_1xdyq"), ExtResource("17_ufinj"), ExtResource("18_vqm4g"), ExtResource("19_as1pv")])

[node name="shipPlayer" parent="." instance=ExtResource("4_uw0nc")]
transform = Transform3D(6.79481e-08, 1.13999e-14, -1, -1.35896e-07, 1, 1.97076e-20, -0.9, -1.50996e-07, -7.54979e-08, -15.137, 2, 0.001)
script = ExtResource("4_jqq52")

[node name="hurt" type="ColorRect" parent="shipPlayer"]
visible = false
offset_right = 904.0
offset_bottom = 1600.0
color = Color(0.619608, 0.0941176, 0, 0.368627)

[node name="Camera3D" type="Camera3D" parent="shipPlayer"]
transform = Transform3D(-1.11061, -0.0235613, 0.0235632, -0.0106036, 0.91135, 0.411497, 0.0280528, -0.411087, 0.911165, 0.113, 4.932, -5.793)
current = true
fov = 90.0

[node name="boatAnimation" type="AnimationPlayer" parent="shipPlayer"]
libraries = {
"": SubResource("AnimationLibrary_u0nxb")
}

[node name="cameraShake" type="AnimationPlayer" parent="shipPlayer"]
speed_scale = 3.7
libraries = {
"": SubResource("AnimationLibrary_tsquk")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="shipPlayer"]
transform = Transform3D(-1, 0, 0, 0, -1, -1.01644e-20, 0, -1.01644e-20, -1, -0.328882, 0.174895, -9.60655)
shape = SubResource("BoxShape3D_3tsol")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="shipPlayer"]
transform = Transform3D(1, -8.74228e-08, -1.50996e-07, -8.74228e-08, -1, 0, 1.50996e-07, -1.32005e-14, 1, -0.323255, 0.183014, -10.1092)
shape = SubResource("BoxShape3D_2pnkp")

[node name="menuPause" type="TouchScreenButton" parent="shipPlayer"]
modulate = Color(1, 1, 1, 0.372549)
position = Vector2(16, 32)
scale = Vector2(3.16667, 1.5)
texture_normal = ExtResource("17_c41jn")
texture_pressed = ExtResource("18_dbp7u")
shape = SubResource("RectangleShape2D_ticod")

[node name="menu2" type="Label" parent="shipPlayer"]
offset_left = 80.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 99.0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("16_adygd")
theme_override_font_sizes/font_size = 90
text = "||"

[node name="leftt" type="TouchScreenButton" parent="shipPlayer"]
modulate = Color(1, 1, 1, 0.352941)
position = Vector2(8, 808)
scale = Vector2(4.79167, 2.9375)
texture_normal = ExtResource("14_dl5ge")
texture_pressed = ExtResource("17_0eti2")
shape = SubResource("RectangleShape2D_eelpb")
action = "left"

[node name="<-" type="Label" parent="shipPlayer"]
offset_left = 80.0
offset_top = 832.0
offset_right = 156.0
offset_bottom = 915.0
theme_override_fonts/font = ExtResource("16_adygd")
theme_override_font_sizes/font_size = 100
text = "<-"

[node name="rightt" type="TouchScreenButton" parent="shipPlayer"]
modulate = Color(1, 1, 1, 0.352941)
position = Vector2(656, 808)
scale = Vector2(4.85417, 2.97917)
texture_normal = ExtResource("14_dl5ge")
texture_pressed = ExtResource("17_0eti2")
shape = SubResource("RectangleShape2D_uivif")
action = "right"

[node name="->" type="Label" parent="shipPlayer"]
offset_left = 744.0
offset_top = 832.0
offset_right = 820.0
offset_bottom = 915.0
theme_override_fonts/font = ExtResource("16_adygd")
theme_override_font_sizes/font_size = 100
text = "->"

[node name="jumpAudio" type="AudioStreamPlayer" parent="shipPlayer"]
stream = ExtResource("20_w02wt")

[node name="menuAudio" type="AudioStreamPlayer" parent="shipPlayer"]
stream = ExtResource("26_tjj7e")

[node name="jump" type="TouchScreenButton" parent="shipPlayer"]
modulate = Color(1, 1, 1, 0.529412)
position = Vector2(256, 1360)
scale = Vector2(7.81324, 2.29177)
texture_normal = ExtResource("14_dl5ge")
texture_pressed = ExtResource("17_0eti2")
shape = SubResource("RectangleShape2D_cfl7j")

[node name="Timer" type="Timer" parent="shipPlayer"]
wait_time = 1.5
autostart = true

[node name="damageAudio" type="AudioStreamPlayer" parent="shipPlayer"]
stream = ExtResource("24_yu2sg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(848, 128)
scale = Vector2(0.104, 0.112)
texture = ExtResource("24_8hx65")

[node name="x" type="Label" parent="."]
modulate = Color(1, 0.819608, 0.392157, 1)
offset_left = 800.0
offset_top = 104.0
offset_right = 832.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("16_adygd")
theme_override_font_sizes/font_size = 50
text = "X"

[node name="CollectedCoins" type="Label" parent="."]
modulate = Color(1, 0.819608, 0.392157, 1)
offset_left = 680.0
offset_top = 96.0
offset_right = 720.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("8_i8see")
theme_override_font_sizes/font_size = 50
text = "Q"
script = ExtResource("25_o24yq")

[node name="score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 134.0
offset_top = 16.0
offset_right = 333.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_i8see")
theme_override_font_sizes/font_size = 60
text = "x"
script = ExtResource("26_2lu3s")

[node name="Highscore" type="Label" parent="." groups=["Persist"]]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_top = 16.0
offset_right = 101.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_i8see")
theme_override_font_sizes/font_size = 60
text = "Score: "

[node name="Timer" type="Timer" parent="."]
process_mode = 1
autostart = true

[node name="huhAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_hux4u")

[node name="mainBackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_ioy0k")

[node name="splashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_ytmqr")

[node name="Lobby_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_61x10")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="released" from="CanvasLayer/PauseUnpause/continue" to="." method="_on_continue_released"]
[connection signal="released" from="CanvasLayer/PauseUnpause/menu" to="CanvasLayer/PauseUnpause" method="_on_menu_released"]
[connection signal="timeout" from="CanvasLayer/PauseUnpause/PauseTimer" to="CanvasLayer/PauseUnpause" method="_on_pause_timer_timeout"]
[connection signal="ready" from="shipPlayer" to="shipPlayer" method="_on_ready"]
[connection signal="released" from="shipPlayer/menuPause" to="." method="_on_menu_released"]
[connection signal="pressed" from="shipPlayer/leftt" to="shipPlayer" method="_on_left_pressed"]
[connection signal="pressed" from="shipPlayer/rightt" to="shipPlayer" method="_on_rightt_pressed"]
[connection signal="pressed" from="shipPlayer/jump" to="shipPlayer" method="_on_jump_pressed"]
[connection signal="timeout" from="shipPlayer/Timer" to="shipPlayer" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
